Fixed accordion not collapsing

--- a/css/main.css
+++ b/css/main.css
@@ -267,3 +267,10 @@ ul .progress-header.active {
 .table>tbody>tr>td{
     padding: 1px !important;
 }
+
+.panel-group{
+    padding: 7px !important;
+}
+span{
+    white-space: pre-line;
+}
